--- a/src/main/resources/templates/articles/index.html
+++ b/src/main/resources/templates/articles/index.html
@@ -12,7 +12,10 @@
 </head>
 <body>
 
-    <header id="header"></header>
+    <header id="header">
+        헤더 삽입부
+        <hr>
+    </header>
 
     <main class="container">
 
@@ -69,34 +72,33 @@
                                     </div>
                                     <div class="result-body">
                                         <div class="table-responsive">
-                                            <table class="table widget-26">
+                                            <table id="article-table" class="table widget-26">
                                                 <thead>
                                                 <tr>
-                                                    <th>제목</th>
-                                                    <th>해시태그</th>
-                                                    <th>작성자</th>
-                                                    <th>작성일</th>
+                                                    <th class="title">제목</th>
+                                                    <th class="hashtag">해시태그</th>
+                                                    <th class="user-id">작성자</th>
+                                                    <th class="created-at">작성일</th>
                                                 </tr>
                                                 </thead>
                                                 <tbody>
                                                 <tr>
                                                     <td>
-                                                        <div class="widget-26-job-title">
-                                                            <a href="#">Senior Software Engineer / Developer</a>
+                                                        <div class="widget-26-job-title title">
+                                                            <a>Senior Software Engineer / Developer</a>
                                                         </div>
                                                     </td>
                                                     <td>
-                                                        <div class="widget-26-job-info">
+                                                        <div class="widget-26-job-info hashtag">
                                                             <p class="type m-0">Full-Time</p>
                                                         </div>
                                                     </td>
                                                     <td>
-                                                        <div class="widget-26-job-category bg-soft-base">
-                                                            <i class="indicator bg-base"></i>
+                                                        <div class="widget-26-job-category bg-soft-base user-id">
                                                             <span>Software Development</span>
                                                         </div>
                                                     </td>
-                                                    <td><time>2022-01-03</time></td>
+                                                    <td class="created-at"><time>2022-01-03</time></td>
                                                 </tr>
                                                 </tbody>
                                             </table>
@@ -129,7 +131,10 @@
         </div>
     </main>
 
-    <footer id="footer"></footer>
+    <footer id="footer">
+        <hr>
+        푸터 삽입부
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
