#26 - 뷰 템플릿에 페이지네이션 기능 반영
`<ul>` 리스트에 목업 데이터를 두 줄 지운 이유는
반복을 시켜야 하는데 `previous`, `next` 버튼이 있어서
함부로 리스트 원소를 초기화할 수 없었기 때문
최소한의 원소를 남겨놓고 치환하는 방식으로 구현

--- a/src/main/resources/templates/articles/index.html
+++ b/src/main/resources/templates/articles/index.html
@@ -107,7 +107,7 @@
                                 </div>
                             </div>
                         </div>
-                        <nav class="d-flex justify-content-center">
+                        <nav id="pagination" class="d-flex justify-content-center">
                             <ul class="pagination pagination-base pagination-boxed pagination-square mb-0">
                                 <li class="page-item">
                                     <a class="page-link no-border" href="#">
@@ -115,9 +115,6 @@
                                     </a>
                                 </li>
                                 <li class="page-item active"><a class="page-link no-border" href="#">1</a></li>
-                                <li class="page-item"><a class="page-link no-border" href="#">2</a></li>
-                                <li class="page-item"><a class="page-link no-border" href="#">3</a></li>
-                                <li class="page-item"><a class="page-link no-border" href="#">4</a></li>
                                 <li class="page-item">
                                     <a class="page-link no-border" href="#">
                                         <span class="sr-only">Next</span>
