--- a/src/main/resources/templates/articles/detail.html
+++ b/src/main/resources/templates/articles/detail.html
@@ -8,7 +8,7 @@
     <title>게시글 페이지</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link href="/css/article-content.css" rel="stylesheet">
+    <link href="/css/articles/article-content.css" rel="stylesheet">
 </head>
 
 <body>
@@ -29,12 +29,12 @@
                 <p><span id="nickname">Uno</span></p>
                 <p><a id="email" href="mailto:djkehh@gmail.com">uno@mail.com</a></p>
                 <p><time id="created-at" datetime="2022-01-01T00:00:00">2022-01-01</time></p>
-                <p><span id="hashtah">#java</span></p>
+                <p><span id="hashtag">#java</span></p>
             </aside>
         </section>
 
         <article id="article-content" class="col-md-7 col-lg-8">
-            <pre>본문<br><br></pre>
+            <pre>본문</pre>
         </article>
     </div>
 
@@ -78,7 +78,7 @@
     </div>
 
     <div class="row g-5">
-        <nav aria-label="Page navigation example">
+        <nav id="pagination" aria-label="Page navigation">
             <ul class="pagination">
                 <li class="page-item">
                     <a class="page-link" href="#" aria-label="Previous">
@@ -93,7 +93,6 @@
             </ul>
         </nav>
     </div>
-
 </main>
 
 <footer id="footer">
