--- a/src/main/resources/templates/articles/index.html
+++ b/src/main/resources/templates/articles/index.html
@@ -5,6 +5,7 @@
     <title>게시판 페이지</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link href="/css/search-bar.css" rel="stylesheet">
+    <link href="/css/table-header.css" rel="stylesheet">
 
     <style>
 
@@ -75,10 +76,10 @@
                                             <table id="article-table" class="table widget-26">
                                                 <thead>
                                                 <tr>
-                                                    <th class="title">제목</th>
-                                                    <th class="hashtag">해시태그</th>
-                                                    <th class="user-id">작성자</th>
-                                                    <th class="created-at">작성일</th>
+                                                    <th class="title"><a>제목</a></th>
+                                                    <th class="hashtag"><a>해시태그</a></th>
+                                                    <th class="user-id"><a>작성자</a></th>
+                                                    <th class="created-at"><a>작성일</a></th>
                                                 </tr>
                                                 </thead>
                                                 <tbody>
