--- a/src/main/resources/templates/articles/index.html
+++ b/src/main/resources/templates/articles/index.html
@@ -23,7 +23,7 @@
         <div class="row">
             <div class="card card-margin search-form">
                 <div class="card-body p-0">
-                    <form action="/articles" method="get">
+                    <form id="search-form">
                         <div class="row">
                             <div class="col-12">
                                 <div class="row no-gutters">
@@ -76,8 +76,8 @@
                                             <table id="article-table" class="table widget-26">
                                                 <thead>
                                                 <tr>
-                                                    <th class="title"><a>제목</a></th>
-                                                    <th class="hashtag"><a>해시태그</a></th>
+                                                    <th class="title col-6"><a>제목</a></th>
+                                                    <th class="hashtag col-2"><a>해시태그</a></th>
                                                     <th class="user-id"><a>작성자</a></th>
                                                     <th class="created-at"><a>작성일</a></th>
                                                 </tr>
@@ -107,7 +107,13 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="row">
+                                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                                    <a class="btn btn-primary me-md-2" role="button" id="write-article">글쓰기</a>
+                                </div>
+                            </div>
                         </div>
+
                         <nav id="pagination" class="d-flex justify-content-center">
                             <ul class="pagination pagination-base pagination-boxed pagination-square mb-0">
                                 <li class="page-item">
